# Saymore

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.zh-CN.md  deny.toml  justfile  typos.toml
.codex/: AGENTS.md
.github/workflows/: ci.yaml  release.yaml
apps/desktop/: Cargo.toml  README.md  build.rs
apps/desktop/i18n/: saymore-desktop.pot
apps/desktop/i18n/zh-Hans/LC_MESSAGES/: saymore-desktop.po
apps/desktop/icons/: icon.icns
apps/desktop/icons/lucide/: LICENSE
apps/desktop/packaging/macos/: Info.plist  generate-dmg-background.swift
apps/desktop/packaging/resources/en.lproj/: InfoPlist.strings
apps/desktop/packaging/resources/zh-Hans.lproj/: InfoPlist.strings
apps/desktop/src/: accessibility_permission_prompt.rs  app_environment.rs  appearance_ui.rs  asr_configuration_prompt.rs  asr_runtime.rs  authorization_ui.rs  ax_compatibility_cli.rs  ax_compatibility_server.rs  delivery_runtime.rs  desktop_core.rs  diagnostics.rs  dictation_completion_runtime.rs  dictation_finish.rs  dictionary_added_overlay.rs  feedback_runtime.rs  home_stats.rs  i18n.rs  local_data_ui.rs  local_settings_runtime.rs  macos_text_delivery_runtime.rs  main.rs  main_window.rs  microphone_access.rs  onboarding.rs  overlay_window.rs  permission_actions.rs  platform_open.rs  recording_actions.rs  recording_audio.rs  recording_limit.rs  recording_metrics.rs  recording_runtime.rs  recording_state.rs  refinement_runtime.rs  regional_format.rs  settings_actions.rs  settings_ui.rs  status_tray.rs  ui_status.rs  ui_tuning.rs  (+3 more)
apps/desktop/src/local_data_ui/: dictionary_ui.rs  history_query.rs  local_settings.rs
apps/desktop/src/onboarding/: local_shortcut.rs  navigation.rs
apps/desktop/src/settings_actions/: audio.rs  diagnostics.rs  shortcut.rs  windows_shortcut.rs
apps/desktop/src/settings_ui/: asr_configuration.rs  llm_configuration.rs  llm_enablement.rs  loaded_settings.rs  model_discovery.rs  provider_key_page.rs  regression_tests.rs
apps/desktop/tests/: i18n_runtime.rs
apps/desktop/ui/: app-window.slint  color-system.slint  components.slint  dictionary-added-overlay.slint  microphone-access.slint  onboarding.slint  overlay-color-system.slint  recording-limit-overlay.slint  recording-overlay.slint  result-overlay.slint  sidebar.slint  status-tray.slint  theme-settings.slint  translations.slint  ui-tuning.slint
apps/desktop/ui/pages/: dictionary.slint  history.slint  home.slint  models.slint  settings.slint
crates/app/: Cargo.toml
crates/app/src/: appearance.rs  audio_recording.rs  cancelled_recording.rs  dictation_completion.rs  dictation_session.rs  dictionary_learning.rs  feedback_sound.rs  final_text_processing.rs  lib.rs  local_settings_mutation.rs  refinement_policy.rs  refinement_prompt.rs  refinement_prompt.txt  refinement_terms.rs  settings.rs  speech_recognition.rs  storage.rs  system_audio.rs  text_delivery.rs  usage_summary.rs
crates/app/tests/: dictation_completion.rs  dictation_handoff.rs  final_text_processing.rs  local_settings_mutation.rs
crates/cli/: Cargo.toml
crates/infra/: Cargo.toml
crates/infra/assets/sounds/: LICENSE.txt
crates/infra/examples/: paraformer_benchmark.rs  paraformer_onnx_probe.rs
crates/infra/src/: app_instance_guard.rs  app_paths.rs  chat_completions_llm.rs  cpal_audio_recorder.rs  dictation_shortcut.rs  dictionary_files.rs  json_settings_store.rs  lib.rs  macos_application_menu.rs  macos_application_reopen.rs  macos_audio_recorder.rs  macos_dock.rs  macos_feedback_sound.rs  macos_launch_at_login.rs  macos_main_window.rs  macos_microphone_permission.rs  macos_overlay_window.rs  macos_settings_store.rs  macos_shortcut_monitor.rs  macos_system_audio.rs  macos_text_delivery.rs  model_discovery.rs  openai_transcriptions_asr.rs  platform_secret_store.rs  storage_usage.rs  system_clock.rs  volcengine_asr.rs  windows_feedback_sound.rs  windows_launch_at_login.rs  windows_microphone_permission.rs  windows_overlay_window.rs  windows_right_alt_hook.rs  windows_shortcut_capture.rs  windows_shortcut_monitor.rs  windows_shortcut_registry.rs  windows_system_audio.rs  windows_text_delivery.rs
crates/infra/src/json_settings_store/: platform_fs.rs  schema.rs  tests.rs
crates/infra/src/macos_settings_store/: tests.rs
crates/infra/src/macos_shortcut_monitor/: event_tap.rs  key_mapping.rs  tests.rs  untrusted_poll.rs
crates/infra/src/macos_text_delivery/: ax.rs  capabilities.rs  clipboard.rs  incremental.rs  keyboard.rs  observation.rs  tests.rs
crates/infra/src/sqlite_storage/: diagnostics.rs  dictionary.rs  dictionary_learning.rs  history.rs  history_search.rs  migrations.rs  mod.rs  models.rs  settings.rs
crates/infra/src/sqlite_storage/migrations/: recent.rs
crates/infra/src/windows_text_delivery/: clipboard.rs  observation.rs
crates/infra/tests/: chat_completions_llm.rs  dictionary_files.rs  dictionary_learning.rs  macos_correction_observation.rs  model_discovery.rs  openai_transcriptions_asr.rs  sqlite_storage.rs  windows_correction_observation.rs
crates/infra/tests/fixtures/: llm_refinement_cases.json  llm_word_order_cases.json
crates/xtask/: Cargo.toml
docs/: README.md  application-types.md  architecture.md  dependency-policy.md  development.md  releasing.md  technology-stack.md  testing.md
docs/adr/: 0001-asr-providers-declare-language-capabilities.md  0002-dual-license-mit-or-apache-2.0.md  0003-use-slint-for-the-desktop-ui.md  0004-use-sqlite-with-application-encrypted-history.md  0005-use-polyform-shield-source-available-license.md  0006-use-semantic-colors-for-desktop-themes.md
docs/product/: asr-model-hub.md  automatic-dictionary-ax-compatibility.md  local-asr-launch-decision-map.md  local-voice-evaluation.md  onboarding-v1.md  open-source-voice-input-wayfinder.md
docs/research/: asr-adaptation-evaluation-and-microsoft-models.md  asr-model-redistribution-license-check.md  cloud-asr-response-metadata-comparison.md  commercial-ui-audio-sources.md  competitor-onboarding-shandianshuo-typeless.md  (+12 more)
scripts/: README.md  dev-preview.sh
(+15 files in other folders)
