[package]
name = "saymore-desktop"
version.workspace = true
description = "Saymore native desktop application"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[package.metadata.packager]
product-name = "Saymore"
identifier = "com.saymore.desktop"
category = "Productivity"
icons = ["icons/icon.icns", "icons/saymore-mark-3d-136.png"]
resources = [{ src = "packaging/resources", target = "" }]

[package.metadata.packager.macos]
minimum-system-version = "12.0"
signing-identity = "Developer ID Application"
info-plist-path = "packaging/macos/Info.plist"

[package.metadata.packager.windows]
allow-downgrades = false

[package.metadata.packager.nsis]
installer-mode = "currentUser"

[features]
history-experiments = ["template-app/history-experiments"]

[[test]]
name = "i18n_runtime"
harness = false

[lints]
workspace = true

[build-dependencies]
slint-build = { workspace = true }
rspolib = { workspace = true }

[dependencies]
slint = { workspace = true }
sys-locale = { workspace = true }
template-app = { workspace = true }
template-infra = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
num-format = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rfd = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
httpmock = { workspace = true }
