[package]
name = "saymore-desktop"
version.workspace = true
description = "Saymore native desktop application"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[package.metadata.packager]
product-name = "Saymore"
identifier = "com.saymore.desktop"
category = "Productivity"
icons = ["icons/icon.icns", "icons/icon.ico"]
resources = [{ src = "packaging/resources", target = "" }]

[package.metadata.packager.macos]
minimum-system-version = "12.0"
signing-identity = "Developer ID Application"
info-plist-path = "packaging/macos/Info.plist"

[package.metadata.packager.dmg]
background = "packaging/macos/dmg-background.png"
windowPosition = { x = 200, y = 120 }
windowSize = { width = 660, height = 420 }
appPosition = { x = 165, y = 210 }
appFolderPosition = { x = 495, y = 210 }

[package.metadata.packager.windows]
allow-downgrades = false

[package.metadata.packager.nsis]
installer-mode = "currentUser"
installer-icon = "icons/icon.ico"
header-image = "packaging/windows/nsis-header.bmp"
sidebar-image = "packaging/windows/nsis-sidebar.bmp"

[features]
history-experiments = ["template-app/history-experiments"]

[[test]]
name = "i18n_runtime"
harness = false

[lints]
workspace = true

[build-dependencies]
slint-build = { workspace = true }
rspolib = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[dependencies]
slint = { workspace = true }
sys-locale = { workspace = true }
template-app = { workspace = true }
template-infra = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
num-format = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rfd = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
raw-window-handle = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
httpmock = { workspace = true }
