[package]
name = "template-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
history-experiments = []

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
