[package]
name = "template-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "template"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
template-app = { workspace = true }
template-infra = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
