[package]
name = "template-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
template-app = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
sherpa-onnx = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
block2 = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.25"
cpal = { workspace = true }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSLayoutAnchor", "NSLayoutConstraint", "NSPasteboard", "NSPasteboardItem", "NSScreen", "NSSound", "NSToolbar", "NSView", "NSWindow", "objc2-core-foundation"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSString"] }
