[package]
name = "template-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
aes-gcm = { workspace = true }
csv = { workspace = true }
template-app = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
fs2 = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
uuid = { workspace = true }
cpal = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
sherpa-onnx = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }
windows = { workspace = true, features = [
    "Foundation",
    "Security_Authorization_AppCapabilityAccess",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
block2 = "0.6"
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.25"
keyring = { workspace = true, features = ["apple-native"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSEvent", "NSLayoutAnchor", "NSLayoutConstraint", "NSMenu", "NSMenuItem", "NSPasteboard", "NSPasteboardItem", "NSResponder", "NSRunningApplication", "NSScreen", "NSSound", "NSToolbar", "NSView", "NSWindow", "objc2-core-foundation"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSError", "NSString"] }
objc2-service-management = { version = "0.3.2", default-features = false, features = ["SMAppService", "objc2", "objc2-foundation", "std"] }
